<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toos="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="?attr/pageBackground"
    app:cardCornerRadius="15dp"
    app:strokeColor="?attr/CardBordersBackground"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titlePauseDialog"
            style="?attr/textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/new_game"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dialogDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titlePauseDialog" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/newGameMenuDialog"
            android:layout_width="197dp"
            android:layout_height="132dp"
            android:layout_marginTop="17dp"
            android:backgroundTint="?attr/newGameMenuBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogDivider">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="44dp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="88dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:id="@+id/easyNewGameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/difficulty_easy"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/middleNewGameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/difficulty_middle"
                    android:textSize="22sp" />


                <TextView
                    android:id="@+id/expertNewGameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/difficulty_expert"
                    android:textSize="22sp" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/buttonCancelFragment"
            style="@style/NeoButtons"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="?attr/fontFamily"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newGameMenuDialog"
            app:neumorph_backgroundColor="?attr/buttonBodyColorTheme"
            app:neumorph_inset="12dp"
            app:neumorph_lightSource="leftTop"
            app:neumorph_shadowColorDark="?attr/buttonShadowDarkTheme"
            app:neumorph_shadowColorLight="?attr/buttonShadowLightTheme"
            app:neumorph_shadowElevation="6dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="flat" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>